Revert "OP-105 Fixing alignment of the dropzone icons (should have been centered)"
This reverts commit 52f0f7109e4f120b3dfebbccb1a7b489292b4c68.

--- a/system/assets/css/admin/core/core.less.css
+++ b/system/assets/css/admin/core/core.less.css
@@ -24922,9 +24922,6 @@ img.presidecms .editable-click:hover {
 .presidecms .asset-upload-dropzone .upload-instructions * {
   cursor: pointer;
 }
-.presidecms .asset-upload-dropzone .dz-message {
-  text-align: center;
-}
 .presidecms .asset-upload-dropzone .dz-message .upload-buttons {
   display: none;
 }
