--- a/system/assets/css/admin/core/preside-dropzone.less
+++ b/system/assets/css/admin/core/preside-dropzone.less
@@ -9,8 +9,6 @@
 	}
 
 	.dz-message {
-		text-align : center;
-
 		.upload-buttons {
 			display : none;
 		}
